; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_portals.c_FillOutside.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_portals.c_FillOutside.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@c_outside = common dso_local global i64 0, align 8
@c_inside = common dso_local global i64 0, align 8
@c_solid = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"--- FillOutside ---\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"%5i solid leafs\0A\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"%5i leafs filled\0A\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"%5i inside leafs\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FillOutside(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* @c_outside, align 8
  store i64 0, i64* @c_inside, align 8
  store i64 0, i64* @c_solid, align 8
  %3 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @FillOutside_r(i32* %4)
  %6 = load i64, i64* @c_solid, align 8
  %7 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i64 %6)
  %8 = load i64, i64* @c_outside, align 8
  %9 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i64 %8)
  %10 = load i64, i64* @c_inside, align 8
  %11 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i64 %10)
  ret void
}

declare dso_local i32 @qprintf(i8*, ...) #1

declare dso_local i32 @FillOutside_r(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
